--- a/package.json
+++ b/package.json
@@ -44,5 +44,13 @@
   "bugs": {
     "url": "https://github.com/wanadev/collision-gjk-epa/issues"
   },
-  "keywords": []
+  "keywords": [
+    "babylon.js",
+    "babylon",
+    "detection",
+    "collision",
+    "response",
+    "gjk",
+    "epa"
+  ]
 }
