--- a/package.json
+++ b/package.json
@@ -1,56 +1,54 @@
 {
-  "name": "collision-gjk-epa",
-  "version": "0.0.2",
-  "description": "Fast collision detection and response for babylonjs",
-  "scripts": {
-    "test": "echo \"grunt test\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wanadev/collision-gjk-epa.git"
-  },
-  "author": {
-    "name": "Wanadev",
-    "url": "http://wanadev.fr/"
-  },
-  "maintainers": [
-    {
-      "name": "clementlvsr",
-      "email": "clevasseur@wanadev.fr"
+    "name": "collision-gjk-epa",
+    "version": "0.0.2",
+    "description": "Fast collision detection and response for babylonjs",
+    "scripts": {
+        "test": "grunt test"
     },
-    {
-      "name": "wanadev",
-      "email": "it@wanadev.fr"
-    }
-  ],
-  "license": "MIT",
-  "main": "./collision-gjk-epa.js",
-  "devDependencies": {
-    "expect.js": "^0.3.1",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^0.11.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-phantomjs": "^4.0.0",
-    "mocha": "^3.0.2"
-  },
-  "dependencies": {
-    "abitbol": "^1.0.3",
-    "babylonjs": "^2.3.0",
-    "lodash": "^4.5.1"
-  },
-  "bugs": {
-    "url": "https://github.com/wanadev/collision-gjk-epa/issues"
-  },
-  "keywords": [
-    "babylon.js",
-    "babylon",
-    "detection",
-    "collision",
-    "response",
-    "gjk",
-    "epa"
-  ]
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/wanadev/collision-gjk-epa.git"
+    },
+    "author": {
+        "name": "Wanadev",
+        "url": "http://wanadev.fr/"
+    },
+    "maintainers": [
+        {
+            "name": "clementlvsr",
+            "email": "clevasseur@wanadev.fr"
+        },
+        {
+            "name": "wanadev",
+            "email": "it@wanadev.fr"
+        }
+    ],
+    "license": "MIT",
+    "main": "./collision-gjk-epa.js",
+    "devDependencies": {
+        "expect.js": "^0.3.1",
+        "grunt": "^1.0.2",
+        "grunt-browserify": "^5.3.0",
+        "grunt-contrib-clean": "^1.0.0",
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-uglify": "^3.3.0",
+        "grunt-contrib-watch": "^1.0.0",
+        "grunt-mocha-phantomjs": "^4.0.0",
+        "mocha": "^5.1.1",
+        "babylonjs": "^2.5.0"
+    },
+    "dependencies": {},
+    "peerDependencies": {},
+    "bugs": {
+        "url": "https://github.com/wanadev/collision-gjk-epa/issues"
+    },
+    "keywords": [
+        "babylon.js",
+        "babylon",
+        "detection",
+        "collision",
+        "response",
+        "gjk",
+        "epa"
+    ]
 }
